# intro-to-text-mining-with-python-2020

./: 1-intro-to-python-and-text.ipynb  2-python-basics-recap-and-more.ipynb  3-choosing-and-collecting-text.ipynb  4-cleaning-and-exploring-text.ipynb  5-analysis-and-visualisation.ipynb  LICENSE  README.md  pyproject.toml  requirements-minimal.txt  requirements.txt
data/: CLEAN-2199-0.txt  ORIGINAL-2199-0.txt
exercises/: 1-reversing-strings-solution.ipynb  1-reversing-strings.ipynb
notebooks/: 1-intro-to-python-and-text.ipynb  2-python-basics-recap-and-more.ipynb
