[tool.poetry]
name = "intro-to-text-mining-with-python-2020"
version = "0.1.0"
description = "Cambridge Digital Humanities Learning: Introduction to Text-Mining with Python"
authors = ["Mary Chester-Kadwell <mec31@cam.ac.uk>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
beautifulsoup4 = "^4.10.0"
matplotlib = "^3.5.1"
spacy = "3.2.3"
en-core-web-sm = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.2.0/en_core_web_sm-3.2.0.tar.gz"}
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
